--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+@font-face{
+  font-family: 'myfont';
+  src: url('AvengeroRegular-zvgl.ttf');
+}
+@font-face{
+  font-family: 'myfont2';
+  src: url('HeroesAssemble3DRegular-gz3p.otf');
+}
+
 *{
     padding: 0;
     margin: 0;
@@ -9,7 +18,7 @@
   @import url('http://fonts.cdnfonts.com/css/avengero');
   @import url('http://fonts.cdnfonts.com/css/heroes-assemble');
   body{
-    font-family: 'Avengero', sans-serif;
+    font-family: 'myfont';
     background-color: black;
   }
   nav{
@@ -208,7 +217,7 @@
 
   .main{
  
-    font-family: 'Avengero', sans-serif;
+   
         font-size: 4.5em;
         letter-spacing: -1px;
      
@@ -348,7 +357,7 @@ h4{
     font-weight: 400px;
     font-size: 30px;
     margin-top: 5px;
-    font-family: 'Heroes Assemble', sans-serif;
+    font-family: 'myfont2';
 }
 h3{
     color: Black;
