--- a/style.css
+++ b/style.css
@@ -280,10 +280,10 @@
     margin: 30px 0;
     border-radius: 30px;
     transition:background 0.5s;
-	height: 250px;
+	height: 350px;
 }
 .btn:hover{
-   background: #fff;
+   background-color: #fff;
 }
 .header{
     background: radial-gradient(#fff,#ffd6d6);
