--- a/style.css
+++ b/style.css
@@ -280,7 +280,8 @@
     margin: 30px 0;
     border-radius: 30px;
     transition:background 0.5s;
-	height: 350px;
+	padding-top:5px;
+
 }
 .btn:hover{
    background-color: #fff;
