--- a/style.css
+++ b/style.css
@@ -280,11 +280,12 @@
     margin: 30px 0;
     border-radius: 30px;
     transition:background 0.5s;
-	padding-top:5px;
+    padding-top:5px;
 
 }
 .btn:hover{
    background-color: #fff;
+	color:#F0131E;
 }
 .header{
     background: radial-gradient(#fff,#ffd6d6);
